# AsyncPyTemplate

./: .env.example  LICENSE  Makefile  README.md  entrypoint.py  pyproject.toml
app/application/api/v1/http/: middleware.py
app/application/api/v1/http/controllers/: base.py
app/domain/common/: constants.py  enums.py  handlers.py  timezone.py
app/domain/core/config/: provider.py  settings.py
app/domain/dto/: __init__.py  broker.py  product.py
app/domain/errors/: adapters.py  base.py  product.py
app/domain/ports/repositories/: product.py
app/infrastructure/adapters/_logging/: __init__.py  config.py  context.py  types.py
app/infrastructure/adapters/amqp/: base.py  consumer.py  kafka.py
app/infrastructure/adapters/cache/: product_cache.py
app/infrastructure/adapters/di/: __init__.py  factory.py  main.py
app/infrastructure/adapters/persistence/rdb/: migration_apply.py  uow.py
app/infrastructure/adapters/persistence/rdb/repositories/: product.py
app/infrastructure/adapters/persistence/rdbms/: uow.py
app/infrastructure/adapters/persistence/rdbms/repositories/: product.py
app/infrastructure/adapters/persistence/repositories/sql/: product.py  (+1 more)
app/infrastructure/ports/: amqp.py  product_cache.py  uow.py
app/services/use_cases/products/add/: __init__.py  handler.py  request.py  response.py
app/services/use_cases/products/get/: handler.py  request.py  response.py
docker/: observability.yml  postgresql.yaml
docker/grafana-provisioning/datasources/: loki.yml
migrations/: 000001_products.rollback.sql  000001_products.sql
tests/: conftest.py
